# KK-file-tool

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  package.json.backup  tsconfig.json
.claude/: settings.local.json
.claude/plans/: settings-enhancement.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Cargo.toml.backup  tauri.conf.json
src-tauri/src/: app_state.rs  config.rs  constants.rs  error.rs  external_config.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: dedup.rs  empty_dirs.rs  image_dedup.rs  mod.rs  mod_tools.rs  move_file.rs  path.rs  pixiv_tag.rs  preview.rs  records.rs  runtime.rs  settings.rs  suffix.rs
src-tauri/src/db/: hash_repo.rs  mod.rs  move_repo.rs  op_record_repo.rs  schema.rs  settings_repo.rs  suffix_repo.rs
src-tauri/src/models/: empty_dirs.rs  hash_record.rs  image_dedup.rs  mod.rs  mod_tools.rs  move_file.rs  path_norm.rs  pixiv_tag.rs  settings.rs  suffix.rs  task.rs
src-tauri/src/services/: dedup.rs  empty_dirs.rs  events.rs  logging.rs  mod.rs  move_file.rs  op_pipeline.rs  pixiv_tag.rs  preview.rs  record.rs  suffix.rs
src-tauri/src/services/image_dedup/: apply.rs  backup.rs  hash.rs  mod.rs  scan.rs
src-tauri/src/services/mod_tools/: backup.rs  cleanup.rs  mod.rs  modify.rs  organize.rs  rename.rs  scan.rs  zipmod.rs
src-tauri/src/utils/: filename.rs  fs.rs  hash.rs  mod.rs  path.rs  time.rs
src/components/: DedupPanel.vue  DuplicateGroupTable.vue  EmptyDirsPanel.vue  ImageDedupPanel.vue  ModDuplicatePanel.vue  ModGroupPanel.vue  ModOrganizePanel.vue  ModRenamePanel.vue  ModScanPanel.vue  ModToolsPanel.vue  ModVersionPanel.vue  MoveConfirmDialog.vue  MoveReportDialog.vue  PathPreviewLink.vue  PixivTagPanel.vue  PreviewPanel.vue  RealtimeLogPanel.vue  RecordDetailDrawer.vue  RecordTab.vue  SuffixPanel.vue  TaskControlPanel.vue
src/components/common/: OpsPanel.vue  Panel.vue  TabBar.vue  VirtualTable.vue
src/composables/: useDangerConfirm.ts  useFolderPicker.ts  useLocalLongTask.ts  usePagination.ts  usePathNormalize.ts  useTaskEvents.ts  useTheme.ts
src/constants/: app.ts  preview.ts  recordColumns.ts  task.ts  theme.ts
src/router/: routes.ts
src/services/: emptyDirs.ts  imageDedup.ts  modTools.ts  pixivTag.ts  preview.ts  record.ts  settings.ts  suffix.ts  task.ts  tauri.ts
src/stores/: _opRecordCrud.ts  config.ts  emptyDirs.ts  imageDedup.ts  modTools.ts  pixivTag.ts  preview.ts  record.ts  runtime.ts  suffix.ts  task.ts
src/styles/: index.css
src/types/: common.ts  emptyDirs.ts  imageDedup.ts  modTools.ts  moveReport.ts  opRecord.ts  pixivTag.ts  preview.ts  record.ts  settings.ts  suffix.ts  task.ts  virtualTable.ts
src/utils/: clipboard.ts  error.ts  format.ts  groupUpsert.ts  mapper.ts  path.ts  taskId.ts
src/views/: RecordManagePage.vue  SettingsPage.vue  TaskPage.vue
