[package]
name = "kk-file-tool"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kk_file_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.6.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"

tokio = { version = "1.49", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
walkdir = "2.5.0"
blake3 = "1.8.3"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
num_cpus = "1.17.0"
rayon = "1.10"

rusqlite = { version = "0.38", features = ["bundled"] }

zip = "8.1.0"
image = "0.25.9"
quick-xml = "0.36"
encoding_rs = "0.8"
