[package]
name = "kk-file-tool"
version = "1.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kk_file_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.6.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"

tokio = { version = "1.49", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
walkdir = "2.5.0"
blake3 = "1.8.3"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
num_cpus = "1.17.0"
rayon = "1.10"

rusqlite = { version = "0.38", features = ["bundled"] }

zip = "8.1.0"
image = "0.25.9"
quick-xml = "0.39"
encoding_rs = "0.8"

# Pixiv 标签整理：HTTP 客户端 + PID 正则匹配。
# reqwest 0.13 把默认 TLS 后端从 native-tls 切到了 rustls，且把旧的 `rustls-tls`
# 特性改名为 `rustls`（旧名只在 0.12 存在）。我们仍显式列出 `rustls` 防止
# `default-features = false` 时被关掉。`socks` 让用户能配 SOCKS5 代理（如 Clash 1080）。
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip", "json", "socks"] }
regex = "1"
